...
          search.exclude.map(({ id }) => id),
          search.facets,
          locale,
        );

  return (
    <Screen scroll={false} testID="results-screen">
      <FlatList
        contentContainerStyle={styles.content}
        data={matches}
        initialNumToRender={10}
        keyboardShouldPersistTaps="handled"
        keyExtractor={({ recipe }) => recipe.id}
...
